2004-02-02  Jean-Louis Martineau <martineau@iro.umontreal.ca>

	* server-src/amverifyrun.sh.in: Do not execute amverify if no tape
	  to verify.

2004-02-02  Jean-Louis Martineau <martineau@iro.umontreal.ca>

	* server-src/amdump.sh.in: Do not redirect to /dev/null.

2004-02-02  Jean-Louis Martineau <martineau@iro.umontreal.ca>

	* config/acinclude.m4i: Define CF_WAIT_INT.
	* configure.in: Call CF_WAIT_INT.
	* common-src/amanda.h: Try to make waitpid doesn't warn.

2004-02-02  Jean-Louis Martineau <martineau@iro.umontreal.ca>

	* configure.in: AM_INIT_AUTOMAKE(amanda, 2.4.5b1).

2004-01-29  Jean-Louis Martineau <martineau@iro.umontreal.ca>

	* Makefile.am (EXTRA_DIST): Add contrib/mkamandisk.

2004-01-29  Christoph Pospiech <pospiech@de.ibm.com>

        * configure.in (AC_CONFIG_FILES): Add changer-src/chg-iomega.pl.
        * changer-src/Makefile.am (libexec_SCRIPTS) Add chg-iomega.
        * changer-src/chg-iomega.pl.in: New changer script.
        * docs/TAPE.CHANGERS: Document chg-iomega.
	* contrib/mkamandisk: Script to format iomega disk.
	* NEWS: New chg-iomega changer script.

2004-01-29  Jean-Louis Martineau <martineau@iro.umontreal.ca>

	* restore-src/amidxtaped.c (scan_init): Remove the log file if it exit.

2004-01-26  Jean-Louis Martineau <martineau@iro.umontreal.ca>

	* configure.in: Set GNUTAR_LISTED_INCREMENTAL_DIRX.
	* example/amanda.conf.in: Update record documentation.
	* man/amanda.8.in: Update record documentation.

2004-01-13  Greg Troxel  <gdt@t...>

	* common-src/krb4-security.c (errstr;): Make krb4 work on 64-bit
	  platforms.  Essentially, change 'unsigned long' to u_int32_t for
	  on-the-wire representation of checksums, declaring that the wire
	  protocol is defined by existing use of unsigned long on 32-bit
	  machines.

	  Modify the data/control handshake similarly, defining a
	  'net_timeval' that uses int32_t rather than long.  Cleanup a latent
	  bug in handshake code that didn't cause trouble before when